--- a/Peng/Base.lproj/LaunchScreen.xib
+++ b/Peng/Base.lproj/LaunchScreen.xib
@@ -5,11 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <mutableArray key="Futura-Extended.ttf">
-            <string>FuturaExtended</string>
-        </mutableArray>
-    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,30 +18,19 @@
                     <color key="textColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PENG" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="138" width="441" height="46.5"/>
-                    <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="40"/>
-                    <color key="textColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="character_cowboy" translatesAutoresizingMaskIntoConstraints="NO" id="57i-fI-fJZ">
-                    <rect key="frame" x="0.0" y="38" width="480" height="100"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="100" id="qXX-jz-eUX"/>
-                    </constraints>
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="Cbv-c8-mXy">
+                    <rect key="frame" x="48" y="0.0" width="384" height="480"/>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.4823529411764706" green="0.20392156862745098" blue="0.18431372549019609" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.2901960784" green="0.38431372549999998" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
+                <constraint firstItem="Cbv-c8-mXy" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="FyA-aj-Iwf"/>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstItem="57i-fI-fJZ" firstAttribute="bottom" secondItem="kId-c2-rCX" secondAttribute="top" id="U5p-h6-cfQ"/>
-                <constraint firstAttribute="trailing" secondItem="57i-fI-fJZ" secondAttribute="trailing" id="VjP-Lb-U3P"/>
-                <constraint firstItem="57i-fI-fJZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Wy8-lm-vJ5"/>
+                <constraint firstItem="Cbv-c8-mXy" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.8" id="Y3Q-w5-Iq3"/>
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="Cbv-c8-mXy" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="g5X-KH-zQy"/>
+                <constraint firstItem="Cbv-c8-mXy" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" id="vT8-Q4-4xO"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -54,6 +38,6 @@
         </view>
     </objects>
     <resources>
-        <image name="character_cowboy" width="400" height="458"/>
+        <image name="logo" width="796" height="796"/>
     </resources>
 </document>
